--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/crystal-icon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/crystal-icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React + TypeScript + shadcn/ui</title>
+    <title>Stern Trading Platform</title>
   </head>
   <body>
     <div id="root"></div>
